Update Readers Library

--- a/src/main.html
+++ b/src/main.html
@@ -26,6 +26,33 @@
     <div class="container">
         <div class="SearchBox">
             <input type="text" id="SearchInput" placeholder="البحث بلأسم">
+            <div class="dropdownContiner">
+                <div class="selectedBox">
+                    <div id="currentReaderOption">أحمد الحذيفي</div>
+                    <span class="material-icons-sharp">expand_more</span>
+                </div>
+                <div class="optionsBox">
+                    <div class="optionsSearchBox">
+                        <h2>البحث بلأسم :</h2>
+                        <input id="currentReaderInput" type="text">
+                    </div>
+                    <div class="readerOptions">
+                        <div class="option">عبد الباسط</div>
+                        <div class="option">امين عبار </div>
+                        <div class="option">عمر شبل</div>
+                        <div class="option">عبد الباسط</div>
+                        <div class="option">امين عبار </div>
+                        <div class="option">عمر شبل</div>
+                        <div class="option">عبد الباسط</div>
+                        <div class="option">امين عبار </div>
+                        <div class="option">عمر شبل</div>
+                        <div class="option">عبد الباسط</div>
+                        <div class="option">امين عبار </div>
+                        <div class="option">عمر شبل</div>
+                    </div>
+
+                </div>
+            </div>
             <div id="downloadAll" class="downloadAllBox">
                 <h3>تحميل كل السور</h3>
                 <div>
